--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -6,7 +6,7 @@
     {%- set page_title_value = site_name_en -%}
 {%- endif -%}
 
-{%- if ('/start/' in page_url) and (page_url != '/start/') and (timeout != 'true') -%}
+{%- if ('/en/start/' in page_url) and (page_url != '/en/start/') and (timeout != 'true') -%}
     {%- set signout_button_value = {
             'text': 'Exit',
             'iconType': 'exit',
@@ -58,31 +58,21 @@
     {%- set language = { 'languages':
         [
             {
-                'url': '/en' + page_url,
-                'ISOCode': 'en',
-                'text': 'English',
-                'buttonAriaLabel': 'Language selector. Current language: English',
-                'chooseLanguage': 'Choose language',
-                'allLanguages': 'All languages',
-                'current': true
+                "url": '/en' + page_url,
+                "ISOCode": "en",
+                "text": "English",
+                "current": true
             },
             {
-                'current': false
-            }
+                "url": '/cy' + page_url,
+                "ISOCode": "cy",
+                "text": "Cymraeg",
+                "current": false
+             }
         ]
-}-%}
-
-{#    LANGUAGE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
-{#                'url': '/cy' + page_url,#}
-{#                'ISOCode': 'cy',#}
-{#                'text': 'Cymraeg',#}
-{#                'buttonAriaLabel': 'Dewisydd iaith. Iaith gyfredol: Cymraeg',#}
-{#                'chooseLanguage': 'Dewiswch iaith',#}
-{#                'allLanguages': 'Pob iaith',#}
-{#                'current': false#}
-
-
+    }-%}
 {%- endif -%}
+
 
 {%- set pageConfig = {
     'title': page_title_value,
