--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -16,17 +16,20 @@
 {%- endif -%}
 
 {%- set footer_content = {
+        'newTabWarning': 'The following links open in a new tab',
         'crest': true,
         'rows': [
             {
                 'itemsList': [
                     {
                         'text': 'About ONS studies',
-                        'url': 'https://www.ons.gov.uk/surveys/informationforhouseholdsandindividuals'
+                        'url': 'https://www.ons.gov.uk/surveys/informationforhouseholdsandindividuals',
+                        'target': '_blank'
                     },
                     {
                         'text': 'Contact us',
-                        'url': 'https://www.ons.gov.uk/aboutus/contactus/surveyenquiries'
+                        'url': 'https://www.ons.gov.uk/aboutus/contactus/surveyenquiries',
+                        'target': '_blank'
                     }
                 ]
             }
@@ -36,15 +39,18 @@
                 'itemsList': [
                     {
                         'text': 'Cookies',
-                        'url': domain_url + '/en/cookies/'
+                        'url': domain_url + '/en/cookies/',
+                        'target': '_blank'
                     },
                     {
                         'text': 'Accessibility statement',
-                        'url': 'https://www.ons.gov.uk/help/accessibility'
+                        'url': 'https://www.ons.gov.uk/help/accessibility',
+                        'target': '_blank'
                     },
                     {
                         'text': 'Privacy and data protection',
-                        'url': domain_url + '/en/privacy-and-data-protection/'
+                        'url': domain_url + '/en/privacy-and-data-protection/',
+                        'target': '_blank'
                     },
                 ]
             }
@@ -77,7 +83,7 @@
 {%- set pageConfig = {
     'title': page_title_value,
     'header': {
-        'orgLogoHref': domain_url + '/en/start/',
+        'orgLogoHref': 'http://www.ons.gov.uk/',
         'title': site_name_en
     },
     'signoutButton': signout_button_value,
