Update main website link

--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -83,7 +83,7 @@
 {%- set pageConfig = {
     'title': page_title_value,
     'header': {
-        'orgLogoHref': 'http://www.ons.gov.uk/',
+        'orgLogoHref': 'https://www.ons.gov.uk/',
         'title': site_name_en
     },
     'signoutButton': signout_button_value,
