Fixed cookies link in welsh page header (#93)

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -112,8 +112,8 @@
         'statementTitle': _('Cookies'),
         'serviceName': '',
         'settingsLinkURL': cookiesPageURL,
-        'statementText': _("<p>To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></p>
-                        <p>This information helps us improve our services and make sure that the website works as well as possible.</p>"),
+        'statementText': _('<p>To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></p>
+                        <p>This information helps us improve our services and make sure that the website works as well as possible.</p>'),
         'preferencesText':  'Gallwch chi <a href="' + cookiesPageURL + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.'
         })
     }}
