--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -51,7 +51,7 @@
         'text': _('Access study'),
         'classes': 'ons-u-mb-xl',
         'name': 'action[save_continue]',
-        'submitType': 'loader'
+        "variants": 'loader'
     }) }}
 
     {%- set content -%}
