--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -9,7 +9,7 @@
 
 {% set page_title = _("Cookies on start.surveys.ons.gov.uk") %}
 
-{%- block main -%}
+{%- block preMain -%}
     {{
         onsBreadcrumbs({
             "ariaLabel": 'Back',
@@ -18,10 +18,13 @@
                     "url": domain_url + '/en/start/',
                     "id": "back",
                     "text": 'Back',
-                }
+                 }
             ]
         })
     }}
+{%- endblock -%}
+
+{%- block main -%}
 
     {% call onsPanel({
             "classes": "ons-u-mb-s ons-u-d-no ons-cookies-confirmation-message",
