--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -46,8 +46,8 @@
                         approved researchers%(close_link)s for statistical purposes only, subject to the same standards of
                         protection we apply (and according to the provisions of the Data Protection Legislation,
                         the Statistics and Registration Service Act 2007 and the Code of Practice for Statistics)',
-                        open_access_to_research_link='<a href="%s">' % access_to_research_link,
-                        open_approved_researchers_link='<a href="%s">' % approved_researchers_link,
+                        open_access_to_research_link='<a href="%s", target="_blank">' % access_to_research_link,
+                        open_approved_researchers_link='<a href="%s", target="_blank">' % approved_researchers_link,
                         close_link='</a>')
                 },
                 {
