Update extra link

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -28,7 +28,7 @@
                 {
                     "text": _('recognise that you are sharing personal information with us and treat it as confidential, as directed
                         by the%(open_code_of_practice_link)s Code of Practice for Statistics%(close_link)s',
-                            open_code_of_practice_link = '<a href="%s">' % code_of_practice_link,
+                            open_code_of_practice_link = '<a href="%s", target="_blank">' % code_of_practice_link,
                             close_link='</a>')
                 },
                 {
