660 Allow tab to open for privacy and data protection links (#95)

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -30,7 +30,7 @@
                 {
                     "text": _('recognise that you are sharing personal information with us and treat it as confidential, as directed
                         by the%(open_code_of_practice_link)s Code of Practice for Statistics%(close_link)s',
-                            open_code_of_practice_link = '<a href="%s">' % code_of_practice_link,
+                            open_code_of_practice_link = '<a href="%s", target="_blank">' % code_of_practice_link,
                             close_link='</a>')
                 },
                 {
@@ -48,8 +48,8 @@
                         approved researchers%(close_link)s for statistical purposes only, subject to the same standards of
                         protection we apply (and according to the provisions of the Data Protection Legislation,
                         the Statistics and Registration Service Act 2007 and the Code of Practice for Statistics)',
-                        open_access_to_research_link='<a href="%s">' % access_to_research_link,
-                        open_approved_researchers_link='<a href="%s">' % approved_researchers_link,
+                        open_access_to_research_link='<a href="%s", target="_blank">' % access_to_research_link,
+                        open_approved_researchers_link='<a href="%s", target="_blank">' % approved_researchers_link,
                         close_link='</a>')
                 },
                 {
