--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -20,7 +20,7 @@
 {%- if 'uac_empty' in field_messages_dict -%}
     {%- set error_uac = {'id': 'uac_empty', 'text': _('Enter an access code')} -%}
 {%- elif 'uac_invalid' in field_messages_dict -%}
-    {%- set error_uac = {'id': 'uac_invalid', 'text': _('Enter a valid access code')} -%}
+    {%- set error_uac = {'id': 'uac_invalid_length', 'text': _('Enter a 16-character access code')} -%}
 {%- elif 'uac_invalid' in field_messages_dict -%}
     {%- set error_uac = {'id': 'uac_invalid', 'text': _('Enter a valid access code')} -%}
 {%- else -%}
