--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -22,7 +22,7 @@
 {%- elif 'uac_invalid_length' in field_messages_dict -%}
     {%- set error_uac = {'id': 'uac_invalid_length', 'text': _('Enter a 16-character access code')} -%}
 {%- elif 'uac_invalid' in field_messages_dict -%}
-    {%- set error_uac = {'id': 'uac_invalid', 'text': _('Enter a valid access code')} -%}
+    {%- set error_uac = {'id': 'uac_invalid', 'text': _('Access code not recognised. Enter the code again.')} -%}
 {%- else -%}
     {%- set error_uac = None -%}
 {%- endif -%}
