Small change in the start page content

--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -54,8 +54,8 @@
     }) }}
 
     <h2 class="ons-u-fs-xl ons-u-mt-l">{{_('Where to find your access code')}}</h2>
-    <p>{{ _('Your access code can be found in the invitation letter or email you received.') }}</p>
-    <p>{{ _('Your 16-character access code will be a combination of letters and numbers.')}}</p>
+    <p>{{ _('Your access code can be found in the invitation letter or email you received.
+        Your 16-character access code will be a combination of letters and numbers.')}}</p>
 
     {%- set details_content -%}
         <p>{{ _('Telephone: +44 800 085 7376<br>8am to 7pm Monday to Friday<br>8am to 1pm Saturday') }}</p>
