--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -55,9 +55,9 @@
 
     <h2 class="ons-u-fs-xl ons-u-mt-l">{{_('Where to find your access code')}}</h2>
     <p>{{ _('Your access code can be found in the invitation letter or email you received.
-        Your 16-character access code will be a combination of letters and numbers.')}}</p>
+        Your 16-character access code will be a combination of letters and numbers.') }}</p>
 
-    {%- set details_content -%}
+    {%- set further_info_content -%}
         <p>{{ _('Telephone: +44 800 085 7376<br>8am to 7pm Monday to Friday<br>8am to 1pm Saturday') }}</p>
         <p>{{ _('Minicom (for the deaf and hearing impaired): 18001 +44 800 085 7376') }}</p>
         <p>{{ _('Email:') }} <a href="mailto: surveyfeedback@ons.gov.uk">surveyfeedback@ons.gov.uk</a></p>
@@ -67,6 +67,6 @@
         "titleTag": "h3",
         "id": "details",
         "title": _('Who can I contact for further information?'),
-        "content": details_content
+        "content": further_info_content
     }) }}
 {% endblock %}
