--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -2,7 +2,7 @@
 {% from "components/radios/_macro.njk" import onsRadios %}
 {% from "components/button/_macro.njk" import onsButton %}
 {% from "components/panel/_macro.njk" import onsPanel %}
-{% from "components/collapsible/_macro.njk" import onsCollapsible %}
+{% from "components/details/_macro.njk" import onsDetails %}
 {% from "components/table/_macro.njk" import onsTable %}
 {% from "components/lists/_macro.njk" import onsList %}
 {% from "components/breadcrumbs/_macro.njk" import onsBreadcrumbs %}
@@ -123,15 +123,8 @@
                     ]
                 }) }}
             <p>{{ _('They always need to be on.') }}</p>
-            {% call onsCollapsible({
-                "id": "cookies-essential-details",
-                "classes": "ons-u-mb-l",
-                "title": _("Learn more about these essential cookies"),
-                "button": {
-                    "close": _("Hide this"),
-                    "contextSuffix": "content"
-                }
-            }) %}
+
+            {%- set essential_cookies_content -%}
                 <h4>{{ _('Your progress') }}</h4>
                 <p>{{ _('We’ll set a cookie to remember your progress while logged in. These cookies do not store your
                     personal data.') }}</p>
@@ -285,11 +278,19 @@
                             }
                         ]
                     }) }}
-            {% endcall %}
+            {%- endset -%}
+
+            {{ onsDetails({
+                "id": "essential-cookies-details",
+                "classes": "ons-u-mb-l",
+                "title": _("Learn more about these essential cookies"),
+                "content": essential_cookies_content
+            }) }}
+
             {{ onsButton({
-                    "type": 'submit',
-                    "text": _('Save changes')
-                }) }}
+                        "type": 'submit',
+                        "text": _('Save changes')
+            }) }}
         </form>
     </div>
 
