--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -100,8 +100,8 @@
         'statementTitle': 'Cookies',
         'serviceName': '',
         'settingsLinkURL': cookiesPageURL,
-        'statementText': '<p>To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></p>
-                        <p>This information helps us improve our services and make sure that the website works as well as possible.</p>',
+        'statementText': 'To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></br>
+                        This information helps us improve our services and make sure that the website works as well as possible.',
         'preferencesText':  'You can <a href="' + cookiesPageURL + '">change your cookie preferences</a> at any time.'
         }) }}
 {%- endblock -%}
