Add translated text to the welsh template

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -21,17 +21,17 @@
             {
                 'itemsList': [
                     {
-                        'text': 'PLACEHOLDER WELSH About ONS studies',
+                        'text': 'Ynglŷn ag astudiaethau SYG',
                         'url': 'https://cy.ons.gov.uk/surveys/informationforhouseholdsandindividuals',
                         'target': '_blank'
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
+                        'text': 'Datganiad hygyrchedd',
                         'url': 'https://cy.ons.gov.uk/help/accessibility',
                         'target': '_blank'
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Cysylltu â ni',
+                        'text': 'Cysylltu â ni',
                         'url': 'https://cy.ons.gov.uk/aboutus/contactus/surveyenquiries',
                         'target': '_blank'
                     }
@@ -42,19 +42,18 @@
             {
                 'itemsList': [
                     {
-                        'text': 'PLACEHOLDER WELSH Cwcis',
+                        'text': 'Cwcis',
                         'url': domain_url + '/cy/cookies/',
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
+                        'text': 'Preifatrwydd a diogelu data',
                         'url': domain_url + '/cy/privacy-and-data-protection/',
                     }
                 ]
             }
         ],
         'copyrightDeclaration': {
-            'copyright': 'PLACEHOLDER WELSH Hawlfraint y Goron a hawliau cronfa ddata 2020 Arolwg Ordnans 100019153.',
-            'text': 'PLACEHOLDER WELSH Mae defnydd o ddata ar gyfeiriadau yn amodol ar y telerau ac amodau.'
+            'copyright': "Hawlfraint y Goron a hawliau cronfa ddata 2020 OS 100019153.",
         }
     }
 -%}
